fixed issues in the charts screen
